crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/decorator-auto-accessors.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class C extends HTMLElement {
  accessor clicked = false;
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,4 @@
 class C extends HTMLElement {
-  accessor clicked = false;
+  accessor;
+  clicked = false;
 }
```

# Output

```js
class C extends HTMLElement {
  accessor;
  clicked = false;
}
```


# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ decorator-auto-accessors.js:2:3
  │
2 │   accessor clicked = false;
  │   ^^^^^^^^


```


